--- a/DangLong.html
+++ b/DangLong.html
@@ -27,7 +27,7 @@
               
         </div>
     
-    <div class="full-bleed"> <img src="/Demo3/images/banner.png "></div>
+    <div class="full-bleed"> <img link href="https://github.com/SSA7-VN/ThangLoiGroup/blob/main/Demo3/images/banner.png "></div>
     <div style="display: flex; justify-content: space-between; margin: auto; margin-top:0.5%">
         <a href="#" class="office" style="padding-right: 0px;padding-left: 0px">
             <img src="/Demo3/images/van-phong.png" alt="Văn Phòng" style="width: 310px;">
