--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar topnav">
         <div class="container-fluid">
             <a class="img" href="">
-                <img src="/Demo3/images/logo.png" alt="Logo">
+                <img src="/images/logo.png" alt="Logo">
             </a>
             <div class="navbar" style="right: 250px; text-transform: uppercase">
                 <strong>
@@ -27,22 +27,22 @@
               
         </div>
     
-    <div class="full-bleed"> <img src="/Demo3/images/banner.png "></div>
+    <div class="full-bleed"> <img src="/images/banner.png "></div>
     <div style="display: flex; justify-content: space-between; margin: auto; margin-top:0.5%">
         <a href="#" class="office" style="padding-right: 0px;padding-left: 0px">
-            <img src="/Demo3/images/van-phong.png" alt="Văn Phòng" style="width: 310px;">
+            <img src="/images/van-phong.png" alt="Văn Phòng" style="width: 310px;">
             <span style="width: 210px;">Văn Phòng</span>
           </a>      
         <a href="#" class="villa" style="padding-right: 0px;padding-left: 0px">
-            <img src="/Demo3/images/biet-thu.png" alt="Biệt Thự" style="width: 310px;">
+            <img src="/images/biet-thu.png" alt="Biệt Thự" style="width: 310px;">
             <span style="width: 210px;">Biệt Thự</span>
           </a>  
         <a href="#" class="apartment" style="padding-right: 0px;padding-left: 0px">
-            <img src="/Demo3/images/can-ho.png" alt="Căn Hộ" style="width: 310px;">
+            <img src="/images/can-ho.png" alt="Căn Hộ" style="width: 310px;">
             <span style="width: 210px;">Căn Hộ</span>
           </a>  
         <a href="#" class="townhouse" style="padding-right: 0px;padding-left: 0px">
-            <img src="/Demo3/images/nha-pho.png" alt="Nhà Phố" style="width: 310px;">
+            <img src="/images/nha-pho.png" alt="Nhà Phố" style="width: 310px;">
             <span style="width: 210px;">Nhà Phố</span>
           </a>
       </div>
